tests/Core/negative/parsing/test011.jvc
builtin def f := 0;
